src/objects/thinkConnect__thinkConnectSettings__mdt.object
<CustomObject>
    <description>Stores thinkConnect packages general settings</description>
    <fields>
        <fullName>thinkConnect__CallCenter__c</fullName>
        <description>CallCenter Id.</description>
        <inlineHelpText>CallCenter Id.</inlineHelpText>
        <label>CallCenter</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>thinkConnect__OAuthClientId__c</fullName>
        <label>ClientId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>thinkConnect__OAuthClientSecret__c</fullName>
        <label>ClientSecret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>thinkConnect__OAuthPassword__c</fullName>
        <label>OAuthPassword</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>thinkConnect__OAuthUser__c</fullName>
        <label>OAuthUser</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>thinkConnect Settings</label>
    <pluralLabel>thinkConnect Settings</pluralLabel>
</CustomObject>